tools used svgs added and alignment issued fixed

--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -12,44 +12,73 @@ a{
     color: white;
 }
 h1{
-    margin-top: 150px;
+    margin:0;
     margin-bottom: 20px;
     font-size: 100px;
 }
 h2{
     margin: 0;
     font-size: 70px;
-    margin-bottom: 100px;
+}
+#icon-container{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap:20px;
+    padding-top: 40px;
+    padding-right: 30px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 50px;
+    filter: blur(10px);
+    transition: filter 0.9s ease-in-out, transform 0.5s ease;
+}
+#icon-container svg{
+    height: 30px;
+    filter: invert(1);
+    will-change: transform;
+    transition:  border 0.1s ease;
+}
+#icon-container svg:hover{
+    cursor: pointer;
+    border-radius: 15px;
+    border-bottom: 4px solid rgb(234, 70, 11);
+    border-top: 4px solid rgb(246, 98, 6);
+    box-shadow: 0 0 20px 5px rgb(255, 100, 3);
+}
+#icon-container svg:active{
+    animation: wiggle 300ms ease-in-out;
+}
+@keyframes wiggle{
+    0%{
+        rotate: 0px;
+    }
+    20%{
+        transform: rotateZ(-10deg);
+    }
+    40%{
+        transform: rotateZ(20deg);
+    }
+    60%{
+        transform: rotateZ(-15deg);
+    }
+    80%{
+        transform: rotateZ(10deg);
+    }
+    100%{
+        transform: rotateZ(-10deg);
+    }
 }
 #headers{
     background-image: linear-gradient(rgb(255, 11, 255),rgb(129, 9, 129),rgb(35, 34, 34),rgb(35, 34, 34));
     color: transparent;
     background-clip: text;
+    margin-top: 100px;
     text-shadow: 0 0 1px rgba(230, 9, 255, 0.705);
     filter: blur(10px);
-    transition: filter 0.9s ease-in-out, transform 0.5s ease;;
+    transition: filter 0.9s ease-in-out, transform 0.5s ease;
 }
-#redirect{
-    display: flex;
-    height: 200px;
-}
-#redirect h2{
-    margin-left: 200px;
-}
-#plane{
-    height : 310px;
-    width: 300px;
-    left: 30px;
-    right: 0px;
-    top : 300px;
-    bottom : 80px;
-}
-#plane img{
-    display: block;
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-}
+
 #main{
     display: flex;
     flex-direction: column;
@@ -61,6 +90,7 @@ h2{
     justify-content: center;
     align-items: center;
     font-size: 25px;
+    margin-top: 100px;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 5px;
